--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,16 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+.spinning {
+  animation: spinning infinite 5s linear;
+}
+
+.inline-block {
+  display: inline-block;
+}
+
+@keyframes spinning {
+  from { transform: rotate(0deg); }
+  to { transform: rotate(360deg); }
+}
