--- a/src/components/Categories.css
+++ b/src/components/Categories.css
@@ -9,14 +9,15 @@
   padding-right: 0 !important; /* sorry ... */
 }
 
-.CategoryList {
-  overflow-y: auto;
-  overflow-x: hidden;
-}
 .CategoryList .list-group-item {
   white-space: nowrap;
 }
 .CategoryList .badge {
   position: absolute; /* don't break */
   right: 10px;
+}
+
+.CategoryListFeatures {
+  overflow-y: auto;
+  overflow-x: hidden;
 }
